# CodeTranser

Designer/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
Designer/backend/app/: bootstrap.py  config.py  main.py  settings_service.py
Designer/backend/app/api/: admin_meta_template.py  admin_tools.py  graphs.py  health.py  metrics.py  node_templates.py  run_events.py
Designer/backend/app/cli/: __init__.py  __main__.py  init_mongo_indexes.py  verify_simulators.py
Designer/backend/app/domain/: errors.py
Designer/backend/app/infra/: checkpointer.py  logging.py  metrics.py  redis.py  run_control.py  tracing.py
Designer/backend/app/langgraph/: errors.py  events.py  pipeline.py  router.py  run_step_store.py  runtime.py  state.py  trace_sink.py
Designer/backend/app/llm/: agent_loop.py  client.py  errors.py  provider.py  schema_coerce.py  types.py
Designer/backend/app/middlewares/: auth.py  error_handler.py  rate_limit.py  sso_adapter.py  trace_id.py
Designer/backend/app/repositories/: app_setting_repo.py  audit_repo.py  base.py  event_log_repo.py  graph_draft_repo.py  graph_repo.py  graph_version_repo.py  json_case_repo.py  meta_template_repo.py  node_template_repo.py  review_repo.py  run_repo.py  tool_repo.py  user_repo.py
Designer/backend/app/schemas/: common.py  graph.py  meta_template.py  run.py  tool.py
Designer/backend/app/services/: design_validator.py  forest_parser.py  graph_service.py  meta_template_service.py  tool_service.py
Designer/backend/app/utils/: clock.py  (+3 more)
Designer/backend/tests/: conftest.py
(+274 files in other folders)
