[project]
name = "cascade-backend"
version = "0.1.0"
description = "Cascade Design Platform backend (v1)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi~=0.110",
  "uvicorn[standard]~=0.29",
  "sqlalchemy~=2.0",
  "asyncmy~=0.2",
  "cryptography>=42",
  "motor~=3.3",
  "redis~=5.0",
  "celery~=5.3",
  "docker~=7.0",
  "langgraph",
  "anthropic~=0.25",
  "openai~=1.17",
  "pydantic~=2.6",
  "pydantic-settings~=2.2",
  "jsonschema~=4.21",
  "jinja2~=3.1",
  "structlog~=24.1",
  "prometheus-client~=0.20",
  "httpx~=0.27",
  "click~=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.0",
  "pytest-asyncio~=0.23",
  "pytest-cov~=4.1",
  "aiosqlite~=0.19",
  "ruff~=0.3",
  "mypy~=1.9",
  "types-redis",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
